<resources>
    <string name="app_name">Cuidate</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Control Home</string>
    <!-- Intro Strings-->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Women Safety!!</string>
    <string name="slide_1_desc">Women, an integral part of our socienty, are facing numerous challenges with respect to their safety and dignity. We have come together to build an application, to make them feel more secure. Using this appication, you would be able to inform your near ones regarding any danger that you might be facing</string>

    <string name="slide_2_title">Emergency Contacts</string>
    <string name="slide_2_desc">Select your emergency contacts, to whom you would like to send a help message in case of danger. Please provide us the permission to access the contacts for the same.</string>

    <string name="slide_3_title">Phone State</string>
    <string name="slide_3_desc">To be able to send text messages, we require to read the your phone\'s current state. Please provide us the permission for the same.</string>

    <string name="slide_4_title">SMS</string>
    <string name="slide_4_desc">When you are in danger, we would be sending a SMS with your location to your selected emergency contacts. Please provide us with the SMS access for the same in the next screen.</string>

    <string name="slide_5_title">Location</string>
    <string name="slide_5_desc">We need to access the device location to send it to your emergency contacts when you are in danger. Please provide us the Location access for the same in the next screen.</string>

    <string name="slide_6_title">Camera</string>
    <string name="slide_6_desc">Quickly access your default camera application with a press of a button</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_send_location">Send GPS Location</string>
    <string name="pref_description_send_location">Send your GPS Location (Latitude, Longitude) in the Help Message. Receiver would then be able to view your location in Google Maps.</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="default_message">Please help me, I am in danger and require your help.</string>
    <string name="pref_title_user_text">Change Your Text Message</string>

    <string name="pref_title_camera">Show Camera Button</string>
    <string name="pref_description_camera">Show/Hide a button to launch camera quickly.</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_edit_contacts">Rechoose Emergency Contacts</string>
    <string name="reset_contacts">Reset Emergency Contacts</string>
    <string name="reset_contacts_summary">Reset your current emergency contacts, and start afresh.</string>
</resources>
