<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="sendLocationStatus"
        android:summary="@string/pref_description_send_location"
        android:title="@string/pref_title_send_location" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="cameraEnable"
        android:summary="@string/pref_description_camera"
        android:title="@string/pref_title_camera" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/default_message"
        android:inputType="textCapWords"
        android:key="user_text"
        android:selectAllOnFocus="true"
        android:title="@string/pref_title_user_text" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

</PreferenceScreen>
